Fix: Page horizontal overflow
- Remove left and right padding on footer
    + Element width was (100% + 4px)

--- a/html/style/ghCore.css
+++ b/html/style/ghCore.css
@@ -159,7 +159,7 @@ ul.plain li {
 	width: 100%;
 	border-top-style: solid;
 	border-top-width: 1px;
-	padding: 2px;
+	padding: 2px 0;
 }
 .ghWidgetBox {
 	position: relative;
